Fixed second axis magnitude plotting and added FUV positions
Former-commit-id: eb7bd4cdfd8ea008a22e3210cd746bae76f5cc89

--- a/vasca/examples/inspect_sources.ipynb
+++ b/vasca/examples/inspect_sources.ipynb
@@ -44,7 +44,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nr sources: 42745 / 298\n"
+      "Nr sources: 42808 / 300\n"
      ]
     }
    ],
@@ -111,12 +111,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d0fc674b2a184280b9da39f2ba5bf6a8",
+       "model_id": "13be6b6646d54a3da51175007f512bf9",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(37, 106, 132, 157, 189, 224, 263, 288…"
+       "VBox(children=(HBox(children=(Dropdown(description='rg_src_id', options=(41, 111, 138, 161, 170, 172, 192, 230…"
       ]
      },
      "metadata": {},
@@ -170,7 +170,6 @@
     "    \n",
     "    fig_lc_src = plt.figure(\"Light curve\",figsize=(8, 4))\n",
     "    plt.cla()\n",
-    "    print(rg_src_id)\n",
     "    vvis.plot_light_curve(rg, rg_src_ids = rg_src_id,fig=fig_lc_src) #\n",
     "    plt.show()\n",
     "    \n",
@@ -221,12 +220,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "aaa5317e-41b7-47fe-9dca-29ae84bc127b",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fdbdfd0060a940199c93636f31311b1f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=6, description='rg_fd_id', max=13), Output()), _dom_classes=('widget-int…"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def plot_sky_field(rg_fd_id):\n",
     "    if rg_fd_id not in rg.tt_fields[\"rg_fd_id\"]:\n",
@@ -253,10 +268,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "b4b6f33c-ac4d-4467-a780-804bee76b0dd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "38074fa15f634e9281b2728748bbf6dd",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=30, description='block_nr', max=60), Output()), _dom_classes=('widget-in…"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "nr_blocks = int(nr_srcs/lc_block_srcs)+1 \n",
     "def plot_lc_range(block_nr):\n",
@@ -295,7 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
