--- a/vasca/examples/vasca_pipe_source_distributions.ipynb
+++ b/vasca/examples/vasca_pipe_source_distributions.ipynb
@@ -27,47 +27,54 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning, some input fluxes <0, returning np.nan for them\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
-       "<div><i>Table length=42745</i>\n",
-       "<table id=\"table140429145801536\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<div><i>Table length=42808</i>\n",
+       "<table id=\"table140354292364240\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>nr_det</th><th>ra</th><th>dec</th><th>pos_err</th><th>pos_nxv</th><th>pos_var</th><th>pos_cpval</th><th>pos_rchiq</th><th>assoc_id</th><th>assoc_dist</th><th>obs_filter_id</th><th>sel</th><th>flux</th><th>flux_err</th><th>flux_nxv</th><th>flux_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>assoc_ffactor</th><th>assoc_fdiff_s2n</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th><th>mag</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>arcsec</th><th></th><th>arcsec2</th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th>1e-06 Jy</th><th>1e-06 Jy</th><th></th><th>1e-12 Jy2</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th><th>mag</th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>int32</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>float32</th><th>int32</th><th>bool</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int32</th><th>int32</th><th>int32</th><th>float32</th></tr></thead>\n",
-       "<tr><td>-1</td><td>21</td><td>243.72631250546766</td><td>54.961703230186934</td><td>0.15282509</td><td>-2.7707365e-12</td><td>1.0478613</td><td>4.3845223e-05</td><td>1.5456147</td><td>73</td><td>0.3644442</td><td>1</td><td>False</td><td>4.4872336</td><td>0.16614628</td><td>-0.01451514</td><td>0.31563574</td><td>0.9399824</td><td>0.5616005</td><td>0.8966376</td><td>-2.4125338</td><td>-1</td><td>0</td><td>5</td><td>22.270052</td></tr>\n",
-       "<tr><td>-1</td><td>19</td><td>243.1927483657149</td><td>54.003436983381334</td><td>0.17605565</td><td>-8.1479203e-13</td><td>1.2157578</td><td>0.0001480726</td><td>1.645518</td><td>260</td><td>0.492568</td><td>1</td><td>False</td><td>3.032782</td><td>0.16001156</td><td>0.008262269</td><td>0.66360676</td><td>0.55466825</td><td>0.91908634</td><td>0.7089481</td><td>-5.3205605</td><td>-1</td><td>1</td><td>5</td><td>22.695396</td></tr>\n",
-       "<tr><td>-1</td><td>17</td><td>242.2038649067561</td><td>55.30062907761731</td><td>0.18675879</td><td>9.976338e-12</td><td>1.7245543</td><td>9.494136e-06</td><td>2.0455635</td><td>542</td><td>0.33867684</td><td>1</td><td>False</td><td>3.7834888</td><td>0.18234624</td><td>-0.008956876</td><td>0.48872027</td><td>0.7376212</td><td>0.7557514</td><td>0.82586074</td><td>-3.4334977</td><td>-1</td><td>2</td><td>5</td><td>22.455269</td></tr>\n",
-       "<tr><td>-1</td><td>4</td><td>242.06340055648113</td><td>54.39679725087804</td><td>0.28953043</td><td>-8.492317e-12</td><td>1.2910662</td><td>0.027201628</td><td>1.2251643</td><td>692</td><td>0.22258912</td><td>1</td><td>False</td><td>4.698502</td><td>0.40109354</td><td>-0.0036486618</td><td>0.5943825</td><td>0.34177014</td><td>1.114169</td><td>0.7030096</td><td>-4.615287</td><td>-1</td><td>3</td><td>5</td><td>22.2201</td></tr>\n",
-       "<tr><td>-1</td><td>5</td><td>241.98680063073462</td><td>55.15809286408099</td><td>0.33355612</td><td>4.7981463e-12</td><td>1.741571</td><td>0.017499456</td><td>1.5426122</td><td>798</td><td>0.41125387</td><td>1</td><td>False</td><td>2.2161605</td><td>0.25377348</td><td>-0.058937497</td><td>0.03821336</td><td>0.97190136</td><td>0.12905887</td><td>1.0290194</td><td>0.22433023</td><td>-1</td><td>4</td><td>5</td><td>23.035995</td></tr>\n",
-       "<tr><td>-1</td><td>8</td><td>241.3032972005574</td><td>54.828457143129874</td><td>0.29594746</td><td>2.0698807e-12</td><td>1.52426</td><td>0.011578997</td><td>1.5550216</td><td>1999</td><td>0.47401157</td><td>1</td><td>False</td><td>2.4219146</td><td>0.22218661</td><td>-0.049597014</td><td>0.1288449</td><td>0.96619195</td><td>0.26854426</td><td>1.0414585</td><td>0.38274828</td><td>-1</td><td>5</td><td>5</td><td>22.939604</td></tr>\n",
+       "<tr><td>-1</td><td>22</td><td>242.25837411483425</td><td>54.34512960701703</td><td>0.16009803</td><td>-5.545325e-12</td><td>0.7391224</td><td>0.064598426</td><td>0.9571404</td><td>480</td><td>0.14931233</td><td>1</td><td>False</td><td>3.1312551</td><td>0.13938813</td><td>-0.0031849085</td><td>0.43505177</td><td>0.71286696</td><td>0.80813944</td><td>0.8801017</td><td>-2.2566721</td><td>-1</td><td>0</td><td>5</td><td>22.660704</td></tr>\n",
+       "<tr><td>-1</td><td>21</td><td>242.07730915788656</td><td>54.17925461911291</td><td>0.1645494</td><td>-2.981787e-12</td><td>1.1546035</td><td>0.000507761</td><td>1.3589226</td><td>635</td><td>0.5533157</td><td>1</td><td>False</td><td>4.1245213</td><td>0.1719268</td><td>0.017095651</td><td>0.99892664</td><td>0.18435213</td><td>1.273061</td><td>0.87995076</td><td>-2.557791</td><td>-1</td><td>1</td><td>5</td><td>22.361567</td></tr>\n",
+       "<tr><td>-1</td><td>2</td><td>241.68792030981004</td><td>54.33245967877683</td><td>0.34057513</td><td>-3.4877773e-12</td><td>1.4282845</td><td>0.005084476</td><td>1.8827313</td><td>1031</td><td>0.24928904</td><td>1</td><td>False</td><td>6.9154534</td><td>0.6084387</td><td>-0.014885484</td><td>0.06321326</td><td>0.7751996</td><td>0.08155612</td><td>0.87951314</td><td>-1.5094444</td><td>-1</td><td>2</td><td>5</td><td>21.80045</td></tr>\n",
+       "<tr><td>-1</td><td>19</td><td>241.6477279413547</td><td>54.31792090337376</td><td>0.16230574</td><td>-2.3082497e-12</td><td>1.3967035</td><td>1.1426469e-07</td><td>1.9217349</td><td>1070</td><td>0.5211947</td><td>1</td><td>False</td><td>4.258515</td><td>0.18272357</td><td>-0.012931989</td><td>0.49602237</td><td>0.7666645</td><td>0.7449991</td><td>0.73479146</td><td>-6.2331038</td><td>-1</td><td>3</td><td>5</td><td>22.326855</td></tr>\n",
+       "<tr><td>-1</td><td>30</td><td>241.63459942556776</td><td>54.164383181187944</td><td>0.14472549</td><td>7.2661376e-13</td><td>1.3041806</td><td>6.821698e-05</td><td>1.5884225</td><td>1083</td><td>0.21805614</td><td>1</td><td>False</td><td>3.7217183</td><td>0.1316275</td><td>0.005373834</td><td>0.6396849</td><td>0.36615312</td><td>1.0684327</td><td>0.76789594</td><td>-5.6510067</td><td>-1</td><td>4</td><td>5</td><td>22.473143</td></tr>\n",
+       "<tr><td>-1</td><td>16</td><td>241.3763055585869</td><td>54.86720756939601</td><td>0.19534786</td><td>-4.500237e-12</td><td>0.8452902</td><td>0.062360726</td><td>0.98306805</td><td>1236</td><td>0.26923802</td><td>1</td><td>False</td><td>3.444413</td><td>0.18734655</td><td>-0.030591467</td><td>0.23535913</td><td>0.98453027</td><td>0.37917736</td><td>0.77686447</td><td>-4.2357154</td><td>-1</td><td>5</td><td>5</td><td>22.55721</td></tr>\n",
        "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
-       "<tr><td>-1</td><td>5</td><td>240.32572837599324</td><td>55.30370888990184</td><td>0.41705883</td><td>1.4153909e-11</td><td>2.4103982</td><td>0.0039655874</td><td>2.2245796</td><td>-1</td><td>-1.0</td><td>1</td><td>False</td><td>2.925854</td><td>0.33081955</td><td>-0.055473886</td><td>0.11524324</td><td>0.95266443</td><td>0.17227878</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>42739</td><td>1</td><td>22.734367</td></tr>\n",
-       "<tr><td>-1</td><td>1</td><td>240.32490884476883</td><td>55.299050515477475</td><td>0.9624223</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>1</td><td>False</td><td>2.1798005</td><td>0.61295164</td><td>-100.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>42740</td><td>1</td><td>23.053959</td></tr>\n",
-       "<tr><td>-1</td><td>-1</td><td>240.3203266020432</td><td>55.50627480017041</td><td>0.7444322</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>-1</td><td>False</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>42741</td><td>1</td><td>-1.0</td></tr>\n",
-       "<tr><td>-1</td><td>1</td><td>240.31779816823231</td><td>55.3028622159417</td><td>1.6243336</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>1</td><td>False</td><td>2.513889</td><td>0.66450626</td><td>-100.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>42742</td><td>1</td><td>22.899134</td></tr>\n",
-       "<tr><td>-1</td><td>-1</td><td>240.30599747957098</td><td>55.27458680961364</td><td>1.253594</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>-1</td><td>False</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>42743</td><td>1</td><td>-1.0</td></tr>\n",
-       "<tr><td>-1</td><td>-1</td><td>240.29256798129626</td><td>55.4133236873463</td><td>0.79909253</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>-1</td><td>False</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>42744</td><td>1</td><td>-1.0</td></tr>\n",
+       "<tr><td>-1</td><td>5</td><td>240.32572837599318</td><td>55.30370888990184</td><td>0.41705883</td><td>1.4153909e-11</td><td>2.4103982</td><td>0.0039655874</td><td>2.2245796</td><td>-1</td><td>-1.0</td><td>1</td><td>False</td><td>2.9258533</td><td>0.33081952</td><td>-0.055473916</td><td>0.115243234</td><td>0.95266443</td><td>0.17227879</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>42802</td><td>1</td><td>22.734367</td></tr>\n",
+       "<tr><td>-1</td><td>1</td><td>240.32490884476883</td><td>55.299050515477475</td><td>0.9624223</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>1</td><td>False</td><td>2.1798005</td><td>0.61295164</td><td>-100.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>42803</td><td>1</td><td>23.053959</td></tr>\n",
+       "<tr><td>-1</td><td>-1</td><td>240.31958201782973</td><td>55.50639739503482</td><td>0.7444322</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>-1</td><td>False</td><td>nan</td><td>-1.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>42804</td><td>1</td><td>nan</td></tr>\n",
+       "<tr><td>-1</td><td>1</td><td>240.31779816823231</td><td>55.3028622159417</td><td>1.6243336</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>1</td><td>False</td><td>2.513889</td><td>0.66450626</td><td>-100.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>42805</td><td>1</td><td>22.899134</td></tr>\n",
+       "<tr><td>-1</td><td>-1</td><td>240.3087130905851</td><td>55.274586923346675</td><td>1.253594</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>-1</td><td>False</td><td>nan</td><td>-1.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>42806</td><td>1</td><td>nan</td></tr>\n",
+       "<tr><td>-1</td><td>-1</td><td>240.29259246351396</td><td>55.41199953986505</td><td>0.79909253</td><td>-100.0</td><td>-1296000000.0</td><td>1.0</td><td>-1.0</td><td>-1</td><td>-1.0</td><td>-1</td><td>False</td><td>nan</td><td>-1.0</td><td>-100.0</td><td>-1.0</td><td>-1.0</td><td>-1.0</td><td>-100.0</td><td>-10000.0</td><td>-1</td><td>42807</td><td>1</td><td>nan</td></tr>\n",
        "</table></div>"
       ],
       "text/plain": [
-       "<Table length=42745>\n",
+       "<Table length=42808>\n",
        "fd_src_id nr_det         ra         ... rg_src_id nr_fd_srcs    mag   \n",
        "                        deg         ...                         mag   \n",
        "  int32   int32       float64       ...   int32     int32     float32 \n",
        "--------- ------ ------------------ ... --------- ---------- ---------\n",
-       "       -1     21 243.72631250546766 ...         0          5 22.270052\n",
-       "       -1     19  243.1927483657149 ...         1          5 22.695396\n",
-       "       -1     17  242.2038649067561 ...         2          5 22.455269\n",
-       "       -1      4 242.06340055648113 ...         3          5   22.2201\n",
-       "       -1      5 241.98680063073462 ...         4          5 23.035995\n",
-       "       -1      8  241.3032972005574 ...         5          5 22.939604\n",
+       "       -1     22 242.25837411483425 ...         0          5 22.660704\n",
+       "       -1     21 242.07730915788656 ...         1          5 22.361567\n",
+       "       -1      2 241.68792030981004 ...         2          5  21.80045\n",
+       "       -1     19  241.6477279413547 ...         3          5 22.326855\n",
+       "       -1     30 241.63459942556776 ...         4          5 22.473143\n",
+       "       -1     16  241.3763055585869 ...         5          5  22.55721\n",
        "      ...    ...                ... ...       ...        ...       ...\n",
-       "       -1      5 240.32572837599324 ...     42739          1 22.734367\n",
-       "       -1      1 240.32490884476883 ...     42740          1 23.053959\n",
-       "       -1     -1  240.3203266020432 ...     42741          1      -1.0\n",
-       "       -1      1 240.31779816823231 ...     42742          1 22.899134\n",
-       "       -1     -1 240.30599747957098 ...     42743          1      -1.0\n",
-       "       -1     -1 240.29256798129626 ...     42744          1      -1.0"
+       "       -1      5 240.32572837599318 ...     42802          1 22.734367\n",
+       "       -1      1 240.32490884476883 ...     42803          1 23.053959\n",
+       "       -1     -1 240.31958201782973 ...     42804          1       nan\n",
+       "       -1      1 240.31779816823231 ...     42805          1 22.899134\n",
+       "       -1     -1  240.3087130905851 ...     42806          1       nan\n",
+       "       -1     -1 240.29259246351396 ...     42807          1       nan"
       ]
      },
      "metadata": {},
@@ -77,7 +84,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Nr. sources: 42745 / 271\n"
+      "Nr. sources: 42808 / 274\n"
      ]
     }
    ],
@@ -703,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
