Handeling of querrying field_id that do not exist for the given filter
Former-commit-id: 8298101abe5b62ab2d2d488c0cbde41e10b8adbd

--- a/vasca/examples/vasca_pipe_result_analysis.ipynb
+++ b/vasca/examples/vasca_pipe_result_analysis.ipynb
@@ -11,15 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a4f905ba-3166-49bf-af70-32ca74ab8cc2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "8f4d3c12-523e-4a3a-9e07-205e605f0435",
    "metadata": {},
    "outputs": [],
@@ -37,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a634423b-968a-4fad-8435-4ef2340005ce",
    "metadata": {},
    "outputs": [
@@ -45,7 +37,7 @@
      "data": {
       "text/html": [
        "<div><i>Table length=14</i>\n",
-       "<table id=\"table139745027392656\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140525693502320\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>field_id</th><th>field_name</th><th>ra</th><th>dec</th><th>observatory</th><th>obs_filter</th><th>fov_diam</th><th>sel</th><th>nr_vis</th><th>time_bin_size_sum</th><th>time_start</th><th>time_stop</th><th>rg_fd_id</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th></th><th>deg</th><th></th><th></th><th>s</th><th>d</th><th>d</th><th></th></tr></thead>\n",
        "<thead><tr><th>bytes22</th><th>bytes22</th><th>float64</th><th>float64</th><th>bytes22</th><th>bytes8</th><th>float32</th><th>bool</th><th>int32</th><th>float32</th><th>float64</th><th>float64</th><th>int32</th></tr></thead>\n",
@@ -92,9 +84,27 @@
     },
     {
      "data": {
+      "text/plain": [
+       "'Nr. visits:'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "157"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/html": [
        "<div><i>Table length=274</i>\n",
-       "<table id=\"table139745460861728\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table140525694759024\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>fd_src_id</th><th>nr_det</th><th>ra</th><th>dec</th><th>pos_err</th><th>pos_nxv</th><th>pos_var</th><th>pos_cpval</th><th>pos_rchiq</th><th>assoc_id</th><th>assoc_dist</th><th>obs_filter_id</th><th>sel</th><th>flux</th><th>flux_err</th><th>flux_nxv</th><th>flux_var</th><th>flux_cpval</th><th>flux_rchiq</th><th>assoc_ffactor</th><th>assoc_fdiff_s2n</th><th>rg_fd_id</th><th>rg_src_id</th><th>nr_fd_srcs</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th>arcsec</th><th></th><th>arcsec2</th><th></th><th></th><th></th><th>arcsec</th><th></th><th></th><th>1e-06 Jy</th><th>1e-06 Jy</th><th></th><th>1e-12 Jy2</th><th></th><th></th><th></th><th></th><th></th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>int32</th><th>int32[2]</th><th>float64</th><th>float64</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>float32</th><th>int64</th><th>float32</th><th>int32[2]</th><th>bool</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>float32[2]</th><th>int32</th><th>int32</th><th>int32</th></tr></thead>\n",
@@ -163,6 +173,7 @@
     "rg = Region()\n",
     "rg.load_from_fits(region_fname)\n",
     "display(rg.tt_fields)\n",
+    "display(\"Nr. visits:\", len(rg.tt_visits))\n",
     "sel_srcs = rg.tt_sources[\"sel\"]\n",
     "display(rg.tt_sources[sel_srcs])\n",
     "#rg.info() # Show available tables"
